--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "express-async-handler": "^1.2.0",
+    "middleware": "^1.0.0",
+    "mongoose": "^8.5.2",
     "nodemon": "^3.1.4"
   }
 }
