--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
     "middleware": "^1.0.0",
     "mongoose": "^8.5.2",
     "nodemon": "^3.1.4"
